Simulate nested modules in WWS

--- a/src/app/components/root/root.tpl.html
+++ b/src/app/components/root/root.tpl.html
@@ -6,6 +6,6 @@
   <div>
     <button-wrapper btn-label="$ctrl.btnText1" on-click="$ctrl.onClickBtn1"></button-wrapper>
     <button-wrapper btn-label="$ctrl.btnText2" on-click="$ctrl.onClickBtn2"></button-wrapper>
-    <quick-tip message="test"></quick-tip>
+    <avatar name="test"></avatar>
   </div>
 </div>
